feat: get unwind to acrually work

--- a/test/platforms/mobile/www/index.html
+++ b/test/platforms/mobile/www/index.html
@@ -14,12 +14,7 @@
 		<script src="build/bundle.js" defer></script>
 
 		<style>
-			body,
-			html {
-				height: 100%;
-			}
-
-			.safe-area {
+			[safe-area] {
 				padding-top: env(safe-area-inset-top);
 				padding-right: env(safe-area-inset-right);
 				padding-bottom: env(safe-area-inset-bottom);
@@ -27,5 +22,5 @@
 			}
 		</style>
 	</head>
-	<body></body>
+	<body ontouchstart=""></body>
 </html>
